perf: 更为激进的投递间隔 perf: 更改投递时间